Fix volume slider and lack of chat scrolling on mobile

--- a/cozycast-server/src/main/resources/static/css/styles.css
+++ b/cozycast-server/src/main/resources/static/css/styles.css
@@ -250,7 +250,7 @@ html, body, #pagecontent, #videosizer {
     align-self: center;
     -webkit-appearance: none;
     appearance: none;
-    width: 100px;
+    width: 100%;
     height: 5px;
     background: #346;
     outline: none;
@@ -585,6 +585,10 @@ html, body, #pagecontent, #videosizer {
         grid:
             "controls"
             "userlist" 1fr;
+    }
+
+    #sidebar {
+        overflow-y: scroll;
     }
 
     #messages {
